[gd_scene load_steps=9 format=3 uid="uid://bkgtg5cn61exs"]

[ext_resource type="Texture2D" uid="uid://c03qqj5bxcay7" path="res://assets/sprites/slime_green.png" id="1_0vu6i"]
[ext_resource type="Script" path="res://scripts/characters/slime.gd" id="1_qowai"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yqmvs"]
atlas = ExtResource("1_0vu6i")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mndes"]
atlas = ExtResource("1_0vu6i")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5m0e"]
atlas = ExtResource("1_0vu6i")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wldpi"]
atlas = ExtResource("1_0vu6i")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_vemea"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqmvs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mndes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5m0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wldpi")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_28xll"]
size = Vector2(12, 10)

[node name="Slime" type="CharacterBody2D" groups=["Slime"]]
z_index = 5
collision_layer = 5
collision_mask = 7
script = ExtResource("1_qowai")
slime_vision = Color(0.513726, 1, 0.717647, 1)
SPEED = 75.0
JUMP_SPEED = 150.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -6)
sprite_frames = SubResource("SpriteFrames_vemea")
animation = &"idle"
autoplay = "idle"
frame = 3
frame_progress = 0.688479

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_28xll")

[node name="Left2" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, 5)
target_position = Vector2(-10, 0)

[node name="Left1" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, -5)
target_position = Vector2(-10, 0)

[node name="Right2" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, 5)
target_position = Vector2(10, 0)

[node name="Right1" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, -5)
target_position = Vector2(10, 0)

[node name="Down2" type="RayCast2D" parent="."]
visible = false
position = Vector2(6, 0)
target_position = Vector2(0, 10)

[node name="Down1" type="RayCast2D" parent="."]
visible = false
position = Vector2(-6, 0)
target_position = Vector2(0, 10)

[node name="SlimeBottom" type="Node2D" parent="."]
visible = false
position = Vector2(0, 6)
